# test_nav_ros

./: README.md
nav_stack/: CMakeLists.txt  package.xml
nav_stack/config/: global_costmap_params.yaml  local_costmap_params.yaml  new_costmap_params.yaml  wor_costmap_common_params.yaml
nav_stack/launch/: amcl.launch  move_base.launch  simulation.launch  upload_robot.launch
nav_stack/maps/: empty.yaml  hospital_floor.yaml  hospital_floor_gray.yaml  ica_arnhem.pgm  ica_arnhem.yaml  ica_presents.pgm  ica_presents.yaml  scenario_0.yaml  scenario_1.yaml  scenario_10.yaml  scenario_11.yaml  scenario_2.yaml  scenario_3.yaml  scenario_4.yaml  scenario_5.yaml  scenario_6.yaml  scenario_9.yaml  scenario_test.yaml  world_map.yaml
nav_stack/models/Hospital_floor_walls/: Hospital_floor_walls.sdf  model.config
nav_stack/models/TestScenario/: model.config  model.sdf
nav_stack/models/bed/: bed.dae  bed.sdf  model.config
nav_stack/models/cabinet_ikea_malm_small/: cabinet_ikea_malm_small.dae  (+2 more)
nav_stack/robots/: cob4-wor.launch  cob4-wor.urdf.xacro  cob4-wor.xml
nav_stack/rviz/: rviz.rviz
nav_stack/worlds/: hospital_floor.world  scenario_0.world  scenario_1.world  scenario_10.world  scenario_11.world  scenario_2.world  scenario_3.world  scenario_3_noise.world  scenario_4.world  scenario_4_noise.world  scenario_5.world  scenario_6.world  scenario_7.world  scenario_8.world  scenario_9.world  scenario_test.world  world.world
simple_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
simple_layers/src/: grid_layer.cpp  simple_layer.cpp  wall_follow_layer.cpp
(+35 files in other folders)
