<?xml version="1.0"?>
<package format="2">
  <name>nav_stack</name>
  <version>0.0.0</version>
  <description>The nav_stack package</description>

  <maintainer email="tomsievers@todo.todo">tomsievers</maintainer>

  <license>MIT</license>


  <depend>roslaunch</depend>
  <build_depend>cob_bringup</build_depend>
  <exec_depend>cob_bringup</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_gazebo_ros_control</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>cob_supported_robots</test_depend>

</package>